--- a/dev/src/stylesheets/_variables.scss
+++ b/dev/src/stylesheets/_variables.scss
@@ -463,15 +463,16 @@ $link-color:                              $primary !default;
 //// Define the minimum dimensions at which your layout will change,
 //// adapting to different screen sizes, for use in media queries.
 //
-//// scss-docs-start grid-breakpoints
-//$grid-breakpoints: (
-//  xs: 0,
-//  sm: 576px,
-//  md: 768px,
-//  lg: 992px,
-//  xl: 1200px,
-//  xxl: 1400px
-//) !default;
+// scss-docs-start grid-breakpoints
+$grid-breakpoints: (
+  xxs: 0,
+  xs: 321px,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+) !default;
 //// scss-docs-end grid-breakpoints
 //
 //@include _assert-ascending($grid-breakpoints, "$grid-breakpoints");
